app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Harmonia Sans Pro';
  src: url('./fonts/HarmoniaSansProCyr-Regular.woff') format('woff');
}

@font-face {
  font-family: 'Myriad Pro';
  src: url('./fonts/myriad-pro/MYRIADPRO-BOLD.OTF') format('truetype');
}

/* @font-face {
  font-family: 'Myriad Pro';
  src: url('./fonts/MYRIADPRO-REGULAR.OTF') format('truetype');
} */

:root {
  --background: #ffffff;
  --foreground: #424242;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.bg-solar {
  background: url('/images/solar-panels.jpg') center center no-repeat;
  background-size: cover;
}

.logo {
  font-size: 3em;
  left: 20px;
  color: #3d5463;
}

.datepicker-container {
  display: flex;
  align-items: center;
  position: relative;
}

.input {
  padding: 10px 5px;
  border-radius: 5px;
  height: 55px;

  &:focus-visible {
    outline: #3848c4;
    outline-style: solid;
    outline-width: 2px;
  }

  &.radio-input {
    height: 30px;
  }

  &.slider-input {
    height: 11px;
    padding: 0;
  }
}

.label {
  @apply block text-sm font-normal text-left mb-1 text-black;
}

.heading {
  font-weight: 400;
  font-size: 20px;
  line-height: 24.44px;
  color: black;
}

.sub-content {
  font-family: Harmonia Sans Pro;
  font-size: 16px;
  font-weight: 400;
  line-height: 20.8px;
  color: #000000;
}

.bg-img {
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
}

.details-form .input-group {
  @apply flex flex-col w-full;

  &.radio-group {
    @apply flex-row;
  }

  &.input-group-background {
    padding: 10px;
    background: #fff;
    border-radius: 10px;
  }
}

.details-form .toggle-group {
  flex-direction: row;
  justify-content: space-between;
}

.first-col {
  @apply text-left;
}

.table-row {
  /* border-bottom: 1px solid #3d5463; */
  padding: 10px 0;
}

details {
  padding: 10px 0;
  border-bottom: 1px solid #3d5463;

  .table-row:last-child {
    border-bottom: none;
  }
}

.select {
  border-radius: 10px;
}

.summary-row {
  flex-direction: row;
  display: flex;
  justify-content: space-between;
  width: 100%;

  padding: 4px;
}

.bottom-fixed {
  background: #f1f1f1;
  border-top: 1px solid #d7d5d5;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
}

.progress-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.circle {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #979797;
  color: #fff;
  transition: background-color 0.3s, border-color 0.3s;
}

.circle.active {
  background-color: #40912a;
  border-color: #40912a;
  color: white;
}

.line {
  flex-grow: 1;
  height: 6px;
  background-color: #b2b2b2;
  transition: background-color 0.3s;
}

.line.active {
  background-color: #40912a;
}

.btn {
  background: linear-gradient(0deg, #5c69ff 0%, #257fe6 100%);
  border-radius: 12px;
  height: 55px;
}

.tab-btn {
  background: linear-gradient(0deg, #5c69ff 0%, #257fe6 100%);
  border-radius: 12px;
}

.slider-container {
  border-radius: 50px;
  padding: 1px 10px 0;
  background: linear-gradient(
    181deg,
    rgba(0, 0, 0, 0.22),
    rgba(255, 255, 255, 0.25)
  );
  box-shadow: 1px 1px 1px 1px gray;
}

input[type='range'] {
  -webkit-appearance: none;
  appearance: none;
  background: #6e6c6b;
  height: 5px;
  border-radius: 50px;
  background-image: linear-gradient(#347aed, #347aed);
  background-size: 50% 100%;
  background-repeat: no-repeat;
  cursor: pointer;
}

input[type='range']::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 22px;
  height: 22px;
  background-image: url('/images/slider-thumb.svg');
  background-repeat: no-repeat;
  background-size: 120% 100%;
  background-position: center;
}

input[type='range']::-moz-range-thumb {
  -moz-appearance: none;
  width: 22px;
  height: 22px;
  background-image: url('/images/slider-thumb.svg');
  background-repeat: no-repeat;
  background-size: 120% 100%;
  background-position: center;
}

.calibration-container {
  padding: 12px 20px 0 18px;
}

.calibration-line-container {
  @apply flex flex-col items-center;
  width: 5px;
}

.calibration-line {
  width: 5px;
  height: 15px;
  border-radius: 5px;
  background: #cacef8;

  &.active {
    background: linear-gradient(0deg, #3944c1 0%, #257fe6 100%);
  }
}

.mini-select {
  @apply font-bold;
  width: 55px;
  color: #fff;
  padding-left: 10px;
  background: #257fe6;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background-image: url('/images/arrows.svg');
  background-repeat: no-repeat, repeat;
  background-position: right 0.7em top 50%, 0 0;
  background-size: 0.65em auto, 100%;
}

.custom-checkbox {
  appearance: none;
  width: 15px;
  height: 15px;
  border-radius: 3px;
  padding: 1px;
}

.custom-checkbox:checked {
  background-color: #257fe6;
}

.custom-checkbox:checked::before {
  /* Use pseudo-element for checked icon */
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background-color: #fff;
  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 20%, 83% 0, 43% 62%);
}

.summary {
  background: #f2f2f4;
  box-shadow: 5px 2px 16px 5px grey;
}

details > summary {
  list-style: none;
}

details>summary::marker,
/* Latest Chrome, Edge, Firefox */
details>summary::-webkit-details-marker

/* Safari */ {
  display: none;
}

.smallBtn {
  font-size: 14px !important;
  padding: 20px 20px !important;
  line-height: 0px !important;
  border-radius: 4px !important;
}
.smallBtn:hover {
  border: 1px solid !important;
}

.cardBox {
  border-radius: 4px !important;
  border: 1px solid #e0e0e0 !important;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) !important;
  padding: 20px 10px 5px !important;
  transition: all 0.3s ease !important;
}
.cardBox:hover {
  transform: translateY(-2px) !important;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3) !important;
}
.cardBox img {
  border-radius: 4px !important;
}

@media (min-width: 900px) {
  .packageDetailMobile {
    display: none !important;
  }
  .packageSummary {
    padding: 0 60px !important;
  }
  .packageAppliance {
    max-height: 200px !important;
  }
}

@media (max-width: 899px) {
  .packageDetaiDesktop {
    display: none !important;
  }
  .packageSummary {
    padding: 0 !important;
  }
  .packageAppliance {
    height: auto !important;
  }
}

.packageSummary th {
  font-weight: 600 !important;
  padding-bottom: 20px !important;
  font-size: 16px !important;
}
.packageSummary td,
.packageSummary th {
  border: 0 !important;
}
.packageSummary tr:nth-child(odd) {
  background-color: transparent !important;
}
.packageSummary tr:nth-child(1) {
  background-color: #fff !important;
}
.packageSummary tr:first-child {
  background-color: transparent !important;
}
.packageSummary tr:nth-child(even) {
  background-color: #fff !important;
}
.packageSummaryTotal td {
  font-weight: 600 !important;
  font-size: 20px !important;
}
.footerPackageEnergy {
  min-height: 300px !important;
  display: flex !important;
  align-items: center !important;
  justify-content: space-around !important;
}

.packagePage {
  background-color: #f0f9ff !important;
}
.blueColor {
  color: #2755eb !important;
}
.blueColor .MuiCardHeader-title {
  color: #2755eb !important;
}

.outright-package-form fieldset {
  border: 0 !important;
}
.outright-package-form label {
  font-size: 16px !important;
  color: #424242 !important;
  font-weight: 400 !important;
  position: relative !important;
  transform: none !important;
  max-width: 100% !important;
  font-family: 'Harmonia Sans Pro' !important;
}

.outright-package-form input,.outright-package-form .MuiSelect-select {
  padding: 10px 10px !important;
  border: 1px solid #e0e0e0 !important;
  border-radius: 4px !important;
}

